test/types/range/enum/mixedEnumRange.good
mixedEnumRange.chpl:4: error: ranges of enums must use a single enum type
