test/types/range/enum/mixedEnumRange.chpl
enum color {red, green, blue};
enum fruit {apple, banana, orange};

var c = color.red..fruit.apple;
writeln(c);
